# zkp-identity

./: .gitignore  README.md
.github/workflows/: android_build.yml
Zkp-App/android/: .gitignore  build.gradle  settings.gradle
Zkp-App/android/rust/: Cargo.toml  rust-toolchain.toml
Zkp-App/android/rust/src/: lib.rs  offline_identity.rs  passport_security.rs  zk_auth.rs
Zkp-App/rust_layer/: Cargo.toml
backend/: server.js
backend/public/: index.html
day14/: input.json  package-lock.json  package.json  pin_check.circom  pin_check.sym  pin_check_0000.zkey  pin_check_final.zkey  pot12_final.ptau  proof.json  public.json  verification_key.json  witness.wtns
day14/pin_check_js/: pin_check.wasm
day15/: age_check.circom  age_check.r1cs  age_check.sym  input.json  package-lock.json  package.json  witness.json  witness.wtns
day15/age_check_js/: age_check.wasm
day16/: find_hash.js  identity.circom  identity.r1cs  identity.sym  input.json  package-lock.json  package.json  witness.json  witness.wtns
day16/identity_js/: identity.wasm
day17/: optimization_test.circom  optimization_test.r1cs  optimization_test.sym  package-lock.json  package.json
day17/optimization_test_js/: optimization_test.wasm
day18/: build_tree.js  input.json  merkle.circom  merkle.r1cs  merkle.sym  merkle_0000.zkey  merkle_final.zkey  package-lock.json  package.json  pot12_final.ptau  proof.json  public.json  verification_key.json  verifier.sol  witness.wtns
day18/merkle_js/: merkle.wasm
day19/: Cargo.toml
day19/src/: main.rs
x_rust/: Cargo.toml  find_hash.js
(+45 files in other folders)
