[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# 👇 YEH HAI FIX: Library ka naam force kar diya
[lib]
name = "zkp_mobile"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
# Plonky2 aur heavy libraries ko abhi comment out rakha hai (Safe Mode)
# plonky2 = { version = "0.1", features = ["parallel"] }
# plonky2_field = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
