[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "zkp_mobile"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
plonky2 = { version = "0.2.2" } 
plonky2_field = { version = "0.2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bincode = "1.3"
getrandom = { version = "0.2", features = ["js"] }

# 👇 FIX: Rayon ko downgrade karke 1.10.0 par lock kiya
# Taaki wo May 2024 wale compiler ke saath compatible rahe
rayon = "=1.10.0" 
